--- a/ProyectoPOW.css
+++ b/ProyectoPOW.css
@@ -13,7 +13,7 @@ header {
     text-align: center;
 }
 
-/* Menú */
+
 nav ul {
     list-style-type: none;
     margin: 0;
@@ -55,7 +55,7 @@ nav ul li a:hover::after {
     width: 100%;
 }
 
-/* Hero */
+
 .hero {
     background: url('hero-background.jpg') no-repeat center center/cover;
     height: 300px;
@@ -66,7 +66,7 @@ nav ul li a:hover::after {
 }
 
 .hero-content {
-    color: #ffcc00; /* Mejor contraste */
+    color: #ffcc00; 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
 }
 
@@ -83,7 +83,7 @@ nav ul li a:hover::after {
     background-color: #ffa500;
 }
 
-/* Grid de zapatillas */
+
 .grid-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -105,7 +105,7 @@ nav ul li a:hover::after {
     margin-bottom: 10px;
 }
 
-/* Footer */
+
 footer {
     background-color: #3b006b;
     color: white;
